# Pyrogram-Bot

./: .dockerignore  .replit  =1.2.5  Dockerfile  bot.py  dropmail.py  email_module.py  email_sessions.json  order_module.py  pyproject.toml  replit.md  requirements.txt  rmbg_stats.json  simple_bot.session  simple_bot.session-journal
.agents/memory/: MEMORY.md  order-module.md
attached_assets/: Pasted-2026-06-08T14-41-38-009075513Z-Traceback-most-recent-ca_1780929865316.txt  Pasted-2026-06-08T14-47-51-147257471Z-2026-06-08-14-47-51-147-_1780930101101.txt  Pasted-2026-06-08T15-27-56-069302215Z-2026-06-08-15-27-56-067-_1780932730984.txt  Pasted-2026-06-08T16-27-30-053747298Z-2026-06-08-16-27-30-053-_1780937704859.txt  Pasted-2026-06-09T12-23-51-971694613Z-2026-06-09-12-23-51-971-_1781009084171.txt  Pasted-2026-06-09T13-08-14-614121759Z-2-DONE-6-3s-2026-06-09T1_1781010538575.txt  Pasted-2026-06-09T13-11-06-724246652Z-11-7-959-65-5-65-5-kB-11_1781010718215.txt
telegram-bot/: .gitignore  bot.py
