[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "kurigram==2.2.23",
    "tgcrypto>=1.2.5",
    "Pillow>=10.0.0",
    "qrcode[pil]>=7.4.2",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "PyMuPDF>=1.23.0",
    "httpx>=0.25.0",
    "requests>=2.32.0",
    "psycopg2-binary>=2.9.0",
]
